# crystal-viewer

./: README.md  guix.scm  manifest.scm  pyproject.toml
src/crystalviewer/: crystal_viewer_gtk.py
