      
[build-system]
requires = ["setuptools>=61.0"] # Modern setuptools
build-backend = "setuptools.build_meta"
#backend-path = "." # Specifies that setuptools.build_meta is in the project itself or venv

[project]
name = "crystal-viewer"
version = "0.1.0"
description = "A GTK3 and OpenGL based crystal structure viewer."
readme = "README.md" # Optional: create a README.md file
requires-python = ">=3.8"
license = {text = "MIT"} # Or your preferred license
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent", # Note GTK dependencies below
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy",
    "PyOpenGL",
#    "PyOpenGL-accelerate", # Optional but recommended
    "PyGObject",           # For GTK3 bindings
]

[project.urls] # Optional
"Homepage" = "https://github.com/daym/crystal-viewer"
"Bug Tracker" = "https://github.com/daym/crystal-viewer/issues"

[project.scripts]
crystal-viewer = "crystalviewer.crystal_viewer_gtk:main"

[tool.setuptools.packages.find]
where = ["src"]  # Look for packages in the src directory
include = ["crystalviewer*"] # Include your package
namespaces = false

